deploy: 6060d0ab465dc1695697152e7e2d845fd2774321

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <base href="/">
+  <base href="/tasty-ramadan/">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Tasty Ramadan Recipe App">
@@ -16,7 +16,7 @@
   <link rel="manifest" href="manifest.json">
 
   <script>
-    const serviceWorkerVersion = "3342102358";
+    const serviceWorkerVersion = "3213504289";
   </script>
   <script src="flutter.js" defer></script>
 </head>
